# map-app

./: .gitignore  app.json  metro.config.js  package-lock.json  package.json
app/: _layout.tsx  index.tsx
app/assets/: markers.ts  services.ts
components/: DebugControls.tsx  DebugMapOverlay.tsx  DepartureTimeModal.tsx  LocationButton.tsx  RouteBottomSheetModal.tsx  Search.tsx
constants/: styles.ts  themes.ts
hooks/: goToUserLocation.ts
modules/gtfs-importer/: .gitignore  GtfsImporter.podspec  package-lock.json  package.json  ubrn.config.yaml
modules/gtfs-router-rust/: GtfsRouterRust.podspec  package.json  ubrn.config.yaml
modules/gtfs-router-rust/rust/: Cargo.toml  README.md
modules/gtfs-router-rust/rust/src/: geo.rs  lib.rs  loader.rs  raptor.rs  repo.rs  settings.rs
modules/gtfs-router-rust/rust/src/corridor/: mod.rs  resolver.rs  seed_bfs.rs  tagging.rs
modules/gtfs-router-rust/rust/src/graph/: coarse.rs  mod.rs  store.rs
patches/: @ubjs+core+0.31.0-3.patch  uniffi-bindgen-react-native+0.31.0-3.patch
scripts/: gtfsSchema.ts  preprocess-gtfs.ts
services/: batchInsertUtil.ts  coarseGraph.ts  coarseGraphStore.ts  corridorResolver.ts  corridorTagging.ts  geoUtil.ts  googleMaps.ts  gtfsDb.ts  gtfsImporter.ts  gtfsInsertBenchmark.ts  gtfsKeyUtil.ts  gtfsLoader.ts  gtfsRepo.ts  gtfsRouter.ts  gtfsWarmup.ts  places.ts  routeTypeUtil.ts  routingSettings.ts  rustGtfsImporter.ts  seedRouteBfs.ts  sqlChunkUtil.ts
services/db/: batchInsertUtil.ts  sqlChunkUtil.ts  (+1 more)
store/: debug.slice.ts  location.slice.ts  route.slice.ts  search.slice.ts  store.ts
(+46 files in other folders)
